--- a/ansible/roles/webapp/tasks/install_alp.yml
+++ b/ansible/roles/webapp/tasks/install_alp.yml
@@ -5,17 +5,29 @@
     download_path: "/tmp"
 
   block:
+    - name: Check if ALP is already installed
+      command: alp --version
+      register: alp_check
+      ignore_errors: yes
+      changed_when: false
+
+    - name: Set fact for ALP installation status
+      set_fact:
+        alp_installed: "{{ alp_check.rc == 0 }}"
+
     - name: Download ALP archive
       get_url:
         url: "{{ alp_url }}"
         dest: "{{ download_path }}/alp_linux_amd64.tar.gz"
         mode: "0644"
+      when: not alp_installed
 
     - name: Extract ALP archive
       unarchive:
         src: "{{ download_path }}/alp_linux_amd64.tar.gz"
         dest: "{{ download_path }}"
         remote_src: yes
+      when: not alp_installed
 
     - name: Move ALP binary to /usr/local/bin
       copy:
@@ -23,6 +35,7 @@
         dest: "/usr/local/bin/alp"
         mode: "0755"
         remote_src: yes
+      when: not alp_installed
 
     - name: Clean up downloaded files
       file:
@@ -31,6 +44,7 @@
       loop:
         - "{{ download_path }}/alp_linux_amd64.tar.gz"
         - "{{ download_path }}/alp"
+      when: not alp_installed
 
     - name: Verify ALP installation
       command: alp --version
