--- a/ansible/roles/webapp/tasks/install_slp.yml
+++ b/ansible/roles/webapp/tasks/install_slp.yml
@@ -5,17 +5,29 @@
     download_path: "/tmp"
 
   block:
+    - name: Check if SLP is already installed
+      command: slp
+      register: slp_check
+      ignore_errors: yes
+      changed_when: false
+
+    - name: Set fact for SLP installation status
+      set_fact:
+        slp_installed: "{{ slp_check.rc == 0 }}"
+
     - name: Download SLP archive
       get_url:
         url: "{{ slp_url }}"
         dest: "{{ download_path }}/slp_linux_amd64.tar.gz"
         mode: "0644"
+      when: not slp_installed
 
     - name: Extract SLP archive
       unarchive:
         src: "{{ download_path }}/slp_linux_amd64.tar.gz"
         dest: "{{ download_path }}"
         remote_src: yes
+      when: not slp_installed
 
     - name: Move SLP binary to /usr/local/bin
       copy:
@@ -23,6 +35,7 @@
         dest: "/usr/local/bin/slp"
         mode: "0755"
         remote_src: yes
+      when: not slp_installed
 
     - name: Clean up downloaded files
       file:
@@ -31,3 +44,4 @@
       loop:
         - "{{ download_path }}/slp_linux_amd64.tar.gz"
         - "{{ download_path }}/slp"
+      when: not slp_installed
