--- a/ansible/roles/webapp/tasks/main.yml
+++ b/ansible/roles/webapp/tasks/main.yml
@@ -18,3 +18,21 @@
 
 - name: Tasks for install_graphviz
   include_tasks: install_graphviz.yml
+
+- name: Install fish shell
+  apt:
+    name: fish
+    state: present
+  become: yes
+
+- name: Ensure pip is installed
+  apt:
+    name: python3-pip
+    state: present
+  become: yes
+
+- name: Install glances
+  pip:
+    name: glances
+    state: present
+  become: yes
