--- a/ansible/roles/webapp/tasks/setup_pprotein.yml
+++ b/ansible/roles/webapp/tasks/setup_pprotein.yml
@@ -55,6 +55,52 @@
         dest: "/etc/systemd/system/pprotein-agent.service"
         mode: "0644"
 
+    - name: Create PProtein targets.json
+      copy:
+        content: |
+        [
+[
+  {
+    "Type": "pprof",
+    "Label": "localhost",
+    "URL": "http://localhost:8080/debug/pprof/profile",
+    "Duration": 10
+  },
+  {
+    "Type": "httplog",
+    "Label": "localhost",
+    "URL": "http://localhost:9000/debug/log/httplog",
+    "Duration": 10
+  },
+  {
+    "Type": "slowlog",
+    "Label": "localhost",
+    "URL": "http://localhost:9000/debug/log/slowlog",
+    "Duration": 10
+  }
+]
+    - name: Create PProtein alp config file
+      copy:
+        content: |
+          matching_groups:
+            - ^/api/user/[0-9a-zA-Z_-]+/theme$
+            - ^/api/user/[0-9a-zA-Z_-]+/livestream$
+            - ^/api/livestream/[0-9a-f_-]+$
+            - ^/api/livestream/[0-9a-f_-]+/livecomment$
+            - ^/api/livestream/[0-9a-f_-]+/reaction$
+            - ^/api/livestream/[0-9a-f_-]+/report$
+            - ^/api/livestream/[0-9a-f_-]+/ngwords$
+            - ^/api/livestream/[0-9a-f_-]+/livecomment/[0-9a-f_-]+/report$
+            - ^/api/livestream/[0-9a-f_-]+/moderate$
+            - ^/api/livestream/[0-9a-f_-]+/enter$
+            - ^/api/livestream/[0-9a-f_-]+/exit$
+            - ^/api/user/[0-9a-zA-Z_-]+$
+            - ^/api/user/[0-9a-zA-Z_-]+/statistics$
+            - ^/api/user/[0-9a-zA-Z_-]+/icon$
+            - ^/api/livestream/[0-9a-f_-]+/statistics$
+        dest: "{{ pprotein_install_path }}/alp.yml"
+        mode: "0644"
+
     - name: Reload systemd
       systemd:
         daemon_reload: yes
