pt-query-digest 追加

--- a/ansible/roles/webapp/tasks/main.yml
+++ b/ansible/roles/webapp/tasks/main.yml
@@ -37,6 +37,12 @@
     state: present
   become: yes
 
+- name: Install pt-query-digest
+  apt:
+    name: percona-toolkit
+    state: present
+  become: yes
+
 - name: Download tmux config file
   get_url:
     url: "https://raw.githubusercontent.com/wataruiwabuchi/tmux_config/master/.tmux.conf"
