--- a/ansible/roles/webapp/tasks/main.yml
+++ b/ansible/roles/webapp/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # TODO initial_setup.sh を見ながら追加したほうがよさそうな処理を追加
 
-- name: Tasks for add_github_ssh_keys
-  include_tasks: add_github_ssh_keys.yml
+# - name: Tasks for add_github_ssh_keys
+#   include_tasks: add_github_ssh_keys.yml
 
 - name: Tasks for install_redis.yml
   include_tasks: install_redis.yml
