--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -33,6 +33,8 @@ all:
       - /home/isucon/private_isu/webapp/golang/setup.sh
       - /home/isucon/private_isu/webapp/golang/go.mod
       - /home/isucon/private_isu/webapp/golang/Dockerfile
+    go_path: /home/isucon/.local/go/bin
+    build_path: /home/isucon/private_isu/webapp/golang
 
     # ローカルでの収集ファイルの保存先
     local_collection_path: "{{ playbook_dir }}/collected_files"
