--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -22,6 +22,13 @@
     executable: /bin/bash
   become: no
 
+- name: Build the application
+  command: make
+  args:
+    chdir: "{{ build_path }}"
+  environment:
+    PATH: "{{ ansible_env.PATH }}:{{ go_path }}"
+
 - name: Restart related services
   systemd:
     name: "{{ item }}"
