ファイルを収集する際にできるだけ元々の情報を保持するように修正

--- a/ansible/roles/file_collector/tasks/main.yml
+++ b/ansible/roles/file_collector/tasks/main.yml
@@ -15,6 +15,10 @@
     delete: no
     recursive: yes
     links: yes
+    relative: yes
+    archive: yes
+    owner: yes
+    group: yes
   loop: "{{ managed_files }}"
 
 - name: Display collected files
