--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -4,7 +4,7 @@ all:
     web:
       hosts:
         web1:
-          ansible_host: 35.72.3.48
+          ansible_host: xxx.xxx.xxx.xxx
     db:
       hosts: {}
   vars:
