--- a/.envrc
+++ b/.envrc
@@ -2,3 +2,4 @@
 export AWS_PROFILE=private
 export TF_CLI_ARGS_plan="--var-file=env/isucon.tfvars"
 export TF_CLI_ARGS_apply="--var-file=env/isucon.tfvars"
+export TF_CLI_ARGS_destroy="--var-file=env/isucon.tfvars"
