--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -6,16 +6,19 @@
     mode: "{{ default_dir_mode }}"
   loop: "{{ managed_files }}"
 
-- name: Synchronize files back to their destinations
-  synchronize:
-    src: "{{ local_collection_path }}/{{ item | basename }}"
-    dest: "{{ item | dirname }}/{{ item | basename }}"
-    mode: push
-    delete: no
-    # rsync_opts:
-    #   - "--include={{ item | basename }}"
-    #   - "--exclude=*"
-  loop: "{{ managed_files }}"
+# NOTE リモート側の owner などを維持するために inplace を使おうとしたが synchronize では使えないらしいので直接実行
+# NOTE ファイルとディレクトリを混在させながらループ処理するのは末尾の / の問題などで難しかったのでいっそのことフルパスであることを活かしてルートに直接配布
+- name: Synchronize files using rsync with advanced options
+  command: >
+    rsync
+    --verbose
+    --inplace
+    --compress
+    --recursive
+    {{ local_collection_path }}/
+    {{ ansible_user }}@{{ ansible_host }}:/
+  delegate_to: localhost
+  become: no
 
 - name: Build the application
   command: make
