--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -4,7 +4,7 @@
     path: "{{ item | dirname }}"
     state: directory
     mode: "{{ default_dir_mode }}"
-  loop: "{{ managed_files }}"
+  loop: "{{ managed_paths }}"
 
 # NOTE リモート側の owner などを維持するために inplace を使おうとしたが synchronize では使えないらしいので直接実行
 # NOTE ファイルとディレクトリを混在させながらループ処理するのは末尾の / の問題などで難しかったのでいっそのことフルパスであることを活かしてルートに直接配布
