--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,3 +6,6 @@ gathering = smart
 fact_caching_timeout = 3600
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_fact_cache
+
+[ssh_connection]
+ssh_args = -F ssh_config
