--- a/ansible/roles/deploy/tasks/main.yml
+++ b/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+
+# NOTE アプリのバイナリが busy となるので最初に止める
+- name: Stop related services
+  systemd:
+    name: "{{ item }}"
+    state: stopped
+  loop: "{{ service_names }}"
+
 # NOTE リモート側の owner などを維持するために inplace を使おうとしたが synchronize では使えないらしいので直接実行
 #   cf. <https://github.com/ansible/ansible-modules-core/issues/727>
 # NOTE ファイルとディレクトリを混在させながらループ処理するのは末尾の / の問題などで難しかったのでいっそのことフルパスであることを活かしてルートに直接配布
@@ -9,9 +17,10 @@
     --inplace
     --compress
     --recursive
+    --rsync-path="sudo rsync"
     -e "ssh -F {{ playbook_dir }}/ssh_config"
     {{ local_collection_path }}/
-    web1:/
+    {{ inventory_hostname }}:/
   delegate_to: localhost
   become: no
 
