--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -1,12 +1,27 @@
+upstream app {
+    server localhost:8080;
+    server 10.0.13.5:8080;
+}
+
 server {
-  listen 80;
-  listen [::]:80;
+    listen 80;
+    listen [::]:80;
 
-  client_max_body_size 10m;
-  root /home/isucon/private_isu/webapp/public/;
+    client_max_body_size 10m;
+    root /home/isucon/private_isu/webapp/public/;
 
-  location / {
-    proxy_set_header Host $host;
-    proxy_pass http://localhost:8080;
-  }
+    # POST / のみ負荷分散
+    location = / {
+        limit_except POST {
+            proxy_pass http://localhost:8080;
+        }
+        proxy_set_header Host $host;
+        proxy_pass http://app;
+    }
+
+    # その他のリクエストは全てlocalhost:8080へ
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass http://localhost:8080;
+    }
 }
