deploy 周りの修正

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+inventory = inventory.yml
 forks = 10
 pipelining = True
 
@@ -6,3 +7,6 @@ gathering = smart
 fact_caching_timeout = 3600
 fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_fact_cache
+
+[ssh_connection]
+ssh_args = -F ssh_config
