負荷は分散された(理由よくわからない)

--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server localhost:8080;
+    # server localhost:8080;
     server 10.0.13.5:8080;
 }
 
@@ -13,8 +13,13 @@ server {
     # POST / のみ負荷分散
     location = / {
         limit_except POST {
-            proxy_pass http://localhost:8080;
+            proxy_pass http://app;
         }
+        proxy_set_header Host $host;
+        proxy_pass http://localhost:8080;
+    }
+
+    location /img/ {
         proxy_set_header Host $host;
         proxy_pass http://app;
     }
