複数台構成を再調整

--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -19,9 +19,10 @@ server {
         proxy_pass http://localhost:8080;
     }
 
-    location /img/ {
+    # NOTE 画像は通信量が多いので web1 に配置
+    location /image/ {
         proxy_set_header Host $host;
-        proxy_pass http://app;
+        proxy_pass http://localhost:8080;
     }
 
     # その他のリクエストは全てlocalhost:8080へ
