Update to return image data from nginx

--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -19,10 +19,8 @@ server {
         proxy_pass http://localhost:8080;
     }
 
-    # NOTE 画像は通信量が多いので web1 に配置
-    location /image/ {
-        proxy_set_header Host $host;
-        proxy_pass http://localhost:8080;
+    location ~ ^/image/(.*)$ {
+        try_files /home/isucon/private_isu/webapp/images/$1 =404;
     }
 
     # その他のリクエストは全てlocalhost:8080へ
