Update nginx config

--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -19,8 +19,10 @@ server {
         proxy_pass http://localhost:8080;
     }
 
-    location ~ ^/image/(.*)$ {
-        try_files /home/isucon/private_isu/webapp/images/$1 =404;
+    # 画像データは直接返す
+    location /image/ {
+        alias /home/isucon/private_isu/webapp/images/;
+        try_files $uri $uri/ =404;
     }
 
     # その他のリクエストは全てlocalhost:8080へ
