Update to cache image

--- a/ansible/collected_files/etc/nginx/sites-available/isucon.conf
+++ b/ansible/collected_files/etc/nginx/sites-available/isucon.conf
@@ -23,6 +23,9 @@ server {
     location /image/ {
         alias /home/isucon/private_isu/webapp/images/;
         try_files $uri $uri/ =404;
+
+        # キャッシュさせる
+        expires 24h;
     }
 
     # その他のリクエストは全てlocalhost:8080へ
