synchronize で ssh の設定を読み込めていなかったので修正

--- a/ansible/roles/file_collector/tasks/main.yml
+++ b/ansible/roles/file_collector/tasks/main.yml
@@ -24,4 +24,6 @@
     dest: "{{ local_collection_path }}{{ item | dirname }}/"
     mode: pull
     recursive: yes
+    rsync_opts:
+      - "-e 'ssh -F {{ playbook_dir }}/ssh_config'"
   loop: "{{ managed_paths }}"
